Upcoming Events Layout Overflow Fixed

--- a/css/reservation.css
+++ b/css/reservation.css
@@ -3,13 +3,13 @@
 }
 
 .reservation-input {
-    width: 17rem;
+    width: 18rem;
     outline: none;
     box-shadow: none;
     background-color: #ffb234;
     padding: 13px;
     border: 0px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     border-radius: 5px;
     color: black;
 }
@@ -25,7 +25,7 @@
     color: white;
     background-color: #ff1516;
     padding: 13px;
-    width: 17rem;
+    width: 18rem;
     border-radius: 5px !important;
 
 }
